--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snitch-client",
+  "name": "my-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
