--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "react": "18.2.0",
