--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -16,13 +16,33 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.6.2",
+    "@heroicons/react": "^1.0.6",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.28.0",
     "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-auth": "^4.15.0",
+    "next-sanity-image": "^3.2.1",
+    "next-seo": "^5.4.0",
+    "next-themes": "^0.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.2",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.2",
+    "swr": "^1.3.0",
+    "use-web3forms": "^1.2.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "sass": "^1.55.0"
   }
 }
