--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -17,9 +17,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.2",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "chart.js": "^3.9.1",
+    "classnames": "^2.3.2",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.1.4"
   },
   "devDependencies": {
     "eslint": "8.25.0",
