--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -14,6 +14,9 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "sweetalert2": "^11.6.2",
+    "swr": "^1.3.0",
     "theme-ui": "^0.15.3"
   },
   "devDependencies": {
