--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -20,7 +20,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "eslint": "8.25.0",
