--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-blog",
+  "name": "medium-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.2",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.4.2"
+    "next": "^13.0.0",
+    "polished": "^4.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "sweetalert2": "^11.6.2",
+    "swr": "^1.3.0",
+    "theme-ui": "^0.15.3"
   },
   "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0"
   }
 }
