--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "bootstrap": "^5.2.2",
     "next": "^13.0.0",
+    "next-themes": "^0.2.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "rsuite": "^5.21.0",
     "sweetalert2": "^11.6.2",
     "swr": "^1.3.0",
     "theme-ui": "^0.15.3"
