--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -13,6 +13,7 @@
     "next": "^13.0.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "sweetalert2": "^11.6.2",
