--- a/snitch-client/package.json
+++ b/snitch-client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "next": "^13.0.0",
     "polished": "^4.2.2",
@@ -20,6 +21,7 @@
     "theme-ui": "^0.15.3"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.5",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
